<resources>
    <string name="app_name">E-commerce</string>
    <string name="trolley">Trolley</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="market">Market</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="share">Share App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_location">Map Location</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="categories">Categories</string>
    <string name="order_again">Order Again</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
</resources>
