<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">


    <include
        android:id="@+id/toolBar"
        layout="@layout/tool_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accountBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_person"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:strokeColor="@android:color/white"
        app:strokeWidth="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notificationBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/notifications"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountBtn"
        app:strokeColor="@android:color/white"
        app:strokeWidth="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/supportBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/support"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_support"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationBtn"
        app:strokeColor="@android:color/white"
        app:strokeWidth="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aboutBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/about_us"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_about"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportBtn"
        app:strokeColor="@android:color/white"
        app:strokeWidth="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/termsBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/terms_conditions"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_terms_and_conditions"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutBtn"
        app:strokeColor="@android:color/white"
        app:strokeWidth="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:text="@string/share"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_share"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsBtn"
        app:strokeColor="@android:color/white"
        app:strokeWidth="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>