<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    android:layout_margin="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/orderNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/orderItemsNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/orderNameTV"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/orderItemsUnitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/orderItemsPriceTv"
            app:layout_constraintTop_toBottomOf="@id/orderNameTV"
            app:layout_constraintStart_toEndOf="@id/orderItemsNameTv"/>

        <TextView
            android:id="@+id/orderItemsPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/orderNameTV"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/viewSeprator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/orderItemsPriceTv"/>

        <TextView
            android:id="@+id/deliveryLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/viewSeprator"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/deliveryStatusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Free"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@+id/deliveryLabelTV"
            app:layout_constraintBottom_toBottomOf="@+id/deliveryLabelTV"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/totalLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/deliveryLabelTV"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/totalPriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120 EGP"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@+id/totalLabelTV"
            app:layout_constraintBottom_toBottomOf="@+id/totalLabelTV"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/green"
            app:cornerRadius="20dp"
            android:text="@string/order_again"
            android:textAllCaps="false"
            android:minWidth="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalPriceTV"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>